Upgraded from swagger v2.0 to openapi v3.0.0
