# ewatercycle_experiment_launcher/api/hello.py
@@ -7,9 +7,9 @@ from ewatercycle_experiment_launcher.generate import PY3_META
 from ewatercycle_experiment_launcher.process import process_notebook
 
 
-def post(request):
+def post(body):
     """Generate notebook and launch it"""
-    return process_notebook(request['notebook'], notebook())
+    return process_notebook(body['notebook'], notebook())
 
 
 def notebook() -> NotebookNode:
